--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ python:
   - "2.7"
 
 env:
-  - PEBBLE_SDK_VERSION=3.9
+  - PEBBLE_SDK_VERSION=3.13.1
 
 before_install:
-  - wget https://github.com/pebble/pebble-tool/releases/download/v4.0-rc5/pebble-sdk-4.0-rc5-linux64.tar.bz2?source=travis
+  - wget https://github.com/pebble/pebble-tool/releases/download/v4.4-dp2/pebble-sdk-4.4-dp2-linux64.tar.bz2?source=travis
   - mkdir -p ~/.pebble-sdk
   - tar -jxf pebble-sdk-* -C ~/.pebble-sdk
   - touch ~/.pebble-sdk/ENABLE_ANALYTICS
