--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ python:
   - "2.7"
 
 env:
-  - PEBBLE_SDK_VERSION=3.13.1
+  - PEBBLE_SDK_VERSION=4.2.1
 
 before_install:
   - if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
-  - wget https://github.com/pebble/pebble-tool/releases/download/v4.4-dp2/pebble-sdk-4.4-dp2-linux64.tar.bz2?source=travis
+  - wget https://github.com/pebble/pebble-tool/releases/download/v4.5-rc1/pebble-sdk-4.5-rc1-linux64.tar.bz2?source=travis
   - mkdir -p ~/.pebble-sdk
   - tar -jxf pebble-sdk-* -C ~/.pebble-sdk
   - touch ~/.pebble-sdk/ENABLE_ANALYTICS
