Add coffee-script dep & remove enableMultiJS

--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "license": "MIT",
   "files": ["dist.zip"],
   "keywords": ["pebble-package"],
+  "devDependencies": {
+    "coffee-script": "^1.11.1"
+  },
   "pebble": {
     "projectType": "package",
     "sdkVersion": "3",
-    "enableMultiJS": true,
     "capabilities": [
       "configurable"
     ],
