--- a/example/demo/package.json
+++ b/example/demo/package.json
@@ -15,7 +15,8 @@
     "targetPlatforms": [
       "aplite",
       "basalt",
-      "chalk"
+      "chalk",
+      "diorite"
     ],
     "watchapp": {
       "watchface": false
